--- a/README.rdoc
+++ b/README.rdoc
@@ -4,6 +4,8 @@ Generates attr_accessors that encrypt and decrypt attributes transparently
 
 It works with ANY class, however, you get a few extra features when you're using it with <tt>ActiveRecord</tt>, <tt>DataMapper</tt>, or <tt>Sequel</tt>
 
+NOTE: This is an AutoGrid specific implementation DO NOT USE for other applications
+
 
 == Installation
 
@@ -19,21 +21,21 @@ Encrypting attributes has never been easier:
   class User
     attr_accessor :name
     attr_encrypted :ssn, :key => 'a secret key'
-  
+
     def load
       # loads the stored data
     end
-  
+
     def save
       # saves the :name and :encrypted_ssn attributes somewhere (e.g. filesystem, database, etc)
     end
   end
-  
+
   @user = User.new
   @user.ssn = '123-45-6789'
   @user.encrypted_ssn # returns the encrypted version of :ssn
   @user.save
-  
+
   @user = User.load
   @user.ssn # decrypts :encrypted_ssn and returns '123-45-6789'
 
@@ -88,7 +90,7 @@ If your class has an instance method that determines the encryption key to use, 
 
   class User
     attr_encrypted :email, :key => :encryption_key
-  
+
     def encryption_key
       # does some fancy logic and returns an encryption key
     end
@@ -108,7 +110,7 @@ This can be used to create asymmetrical encryption by requiring users to provide
 
 === Conditional encrypting
 
-There may be times that you want to only encrypt when certain conditions are met. For example maybe you're using rails and you don't want to encrypt 
+There may be times that you want to only encrypt when certain conditions are met. For example maybe you're using rails and you don't want to encrypt
 attributes when you're in development mode. You can specify conditions like this:
 
   class User < ActiveRecord::Base
@@ -129,7 +131,7 @@ Lets suppose you'd like to use this custom encryptor class:
     def self.silly_encrypt(options)
       (options[:value] + options[:secret_key]).reverse
     end
-  
+
     def self.silly_decrypt(options)
       options[:value].reverse.gsub(/#{options[:secret_key]}$/, '')
     end
